[package]
edition = "2021"
name = "rust-load"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
awc = {version = "3.0.0-beta.12"}
log = "0.4"
serde = "1.0.21"
tokio = {version = "1", feature = ["full"]}
